Project the_sathletes {
  database_type: 'PostgreSQL'
  Note: '''
    # The Sathletes Database
  '''
}

Table users as U {
  username varchar [pk]
  role varchar [not null, default: 'depositor']
  hashed_password varchar [not null]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [unique, not null]
  phone varchar [unique, not null]
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01']
  created_at timestamptz [not null, default: `now()`]
}

Table posts as P {
  id integer [pk]
  title varchar [not null]
  body varchar [not null]
  created_by varchar [ref: > U.username, not null]
  create_at timestampz [not null, default: 'now()']
}

Table post_comments as Co {
  id integer [pk]
  of_post integer [ref: > P.id, not null]
  body varchar [not null]
  created_by varchar [ref: > U.username, not null]
  create_at timestampz [not null, default: 'now()']
}

Table verify_emails {
  id bigserial [pk]
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}